--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 spring.sleuth.sampler.percentage=1.0
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.zipkin.base-url=http://localhost:4444
 spring.zipkin.enabled=true
